--- a/themes/blog/theme.yaml
+++ b/themes/blog/theme.yaml
@@ -1,5 +1,5 @@
-name: Demo
-description: 'Demo October CMS theme. Demonstrates the basic concepts of the front-end theming: layouts, pages, partials, components, content blocks, AJAX framework.'
-author: October CMS
-homepage: 'http://octobercms.com'
+name: Blog
+description: 'Блог на OctoberCMS'
+author: MyXaBro
+homepage: ''
 code: ''
